<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/other_user_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="24dp"
                android:layout_marginVertical="8dp"
                android:text="@string/userName"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/drugRV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/fab"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/other_user_title"
                tools:listitem="@layout/user_prescription_card" />
        </LinearLayout>

    </ScrollView>


        <!-- TODO: Update blank fragment layout -->






    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="edit or delete medication"
        android:padding="24dp"
        android:scaleType="center"
        android:backgroundTint="@color/purple_200"
        app:fabCustomSize="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="48dp"
        android:theme="@style/Theme.RXpress10"
        android:src="@drawable/ic_baseline_add_24" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="Edit Prescription Button"
        android:src="@drawable/ic_baseline_add_24"
        app:backgroundTint="@color/purple_200"
        android:theme="@style/Theme.RXpress10"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/fab"
        app:layout_constraintEnd_toEndOf="@id/fab"
        app:layout_constraintStart_toStartOf="@id/fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/delete_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:contentDescription="Edit Prescription Button"
        android:src="@drawable/ic_baseline_delete_24"
        app:backgroundTint="@color/purple_200"
        android:theme="@style/Theme.RXpress10"
        app:fabSize="mini"
        app:layout_constraintBottom_toTopOf="@id/add_fab"
        app:layout_constraintEnd_toEndOf="@id/fab"
        app:layout_constraintStart_toStartOf="@id/fab" />


</androidx.constraintlayout.widget.ConstraintLayout>

