...
    <string name="administered_s">Administered: %s</string>
    <string name="interaction_help">Look up high severity drug interactions
        by clicking the search icon at the top of the screen</string>

    <string-array name="Units">
        <item>Units</item>
        <item>mg</item>
        <item>g</item>
        <item>μg</item>
        <item>grains</item>
        <item>milliequivalents</item>
        <item>mL</item>
        <item>L</item>
...
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>

    <string-array name="Adminstered">
        <item>Orally</item>
        <item>Inhalation</item>
        <item>Instillation</item>
        <item>Intramuscular Injection</item>
        <item>Intravenous Injection</item>
        <item>Subcutaneous Injection</item>
        <item>Transdermal Administration</item>
...
