<resources>
    <string name="app_name">TODO</string>
    <string name="do_you_already_have_an_account">Do you already have an account?</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="email2">Email</string>
    <string name="register">Register</string>

    <!-- Google SignIn/Register -->
    <string name="google_signin">Google Login</string>
    <string name="password1">Password</string>
    <string name="web_client_id">375925104138-s7rm9go70nvjasaia5jooels47nhl7n9.apps.googleusercontent.com</string>
    <string name="exit">Exit</string>
    <string name="title_activity_event_fragment">EventFragment</string>

</resources>