...
        android:textColorHint="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/editTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="84dp"
        android:padding="5dp"
        android:text="Forgot Passsword"
        android:textColor="@color/black"
...
